WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187891
[JSC] GetByIdVariant and InByIdVariant do not need slot base if they are not "hit" variants
https://bugs.webkit.org/show_bug.cgi?id=187891
Summary
[JSC] GetByIdVariant and InByIdVariant do not need slot base if they are not ...
Yusuke Suzuki
Reported
2018-07-22 11:02:25 PDT
[JSC] GetByIdVariant and InByIdVariant do not need slot base if they are not "hit" variants
Attachments
Patch
(2.83 KB, patch)
2018-07-22 11:02 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(5.64 KB, patch)
2018-07-22 12:17 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2018-07-22 11:02:35 PDT
Created
attachment 345540
[details]
Patch WIP: comments are welcome!
Saam Barati
Comment 2
2018-07-22 11:09:17 PDT
(In reply to Yusuke Suzuki from
comment #0
)
> [JSC] GetByIdVariant and InByIdVariant do not need slot base if they are not > "hit" variants
Seems reasonable
Yusuke Suzuki
Comment 3
2018-07-22 11:12:51 PDT
I've ensured that this patch fixes performance regression in SixSpeed/destructuring-es6. Previously, this bug makes some statuses "Slow", and emits "GetById" DFG node. And it breaks OAS. baseline patched destructuring.es6 322.4751+-2.8517 ^ 96.2486+-5.5259 ^ definitely 3.3504x faster
https://arewefastyet.com/#machine=29&view=single&suite=six-speed&subtest=destructuring-es6
Yusuke Suzuki
Comment 4
2018-07-22 12:17:38 PDT
Created
attachment 345541
[details]
Patch
Yusuke Suzuki
Comment 5
2018-07-22 12:18:03 PDT
OK, the patch is ready.
Saam Barati
Comment 6
2018-07-22 12:23:18 PDT
Comment on
attachment 345541
[details]
Patch r=me seems reasonable
Yusuke Suzuki
Comment 7
2018-07-22 12:24:39 PDT
Committed
r234090
: <
https://trac.webkit.org/changeset/234090
>
Radar WebKit Bug Importer
Comment 8
2018-07-22 12:25:17 PDT
<
rdar://problem/42481622
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug